# lighttrack

./: .dockerignore  .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  README.md  agent.example.toml  context-map.json
.claude/: CLAUDE.md  settings.json
.claude/commands/: idea-02153919-add-a-provider-seam-and-unit-t.md  idea-0448b849-add-env-example-and-one-comman.md  idea-1d725f14-add-justfile-task-runner-for-b.md  idea-248f188f-add-ci-quality-gate-fmt-clippy.md  idea-2d586e0e-admin-key-compared-in-non-cons.md  idea-3dcf6e91-replace-risky-unwrap-expect-in.md  idea-3dd0ba9f-capture-end-user-feedback-to-c.md  idea-d06ec323-add-unit-tests-for-untested-ru.md  scan-contexts.md  structure-rules.md
.claude/skills/onboard/: SKILL.md
.claude/skills/perfect/: skill.md
.github/workflows/: ci.yml  docker.yml  release.yml
actions/: README.md
actions/_example/echo/: action.toml  prompt.md  schema.json
clients/: README.md
clients/python/: README.md  example.py  pyproject.toml
clients/python/lighttrack/: __init__.py  auto.py  client.py  instrument.py
clients/python/tests/: test_instrument.py
clients/rust/: Cargo.toml  README.md
clients/rust/examples/: quickstart.rs
clients/rust/src/: lib.rs
clients/typescript/: README.md  example.ts  package-lock.json  package.json  tsconfig.json
clients/typescript/src/: index.ts  instrument.test.ts  instrument.ts
config/: calibration.example.jsonl  fx_rates.json  model_aliases.json  pricing.json
crates/agent/: Cargo.toml
crates/agent/src/: actions.rs  cloud.rs  config.rs  connect.rs  exec.rs  main.rs  run.rs
crates/anon/: Cargo.toml
crates/anon/src/: lib.rs  tests.rs
crates/api/: Cargo.toml
crates/api/src/: alerts.rs  auth.rs  benchmarks.rs  billing.rs  collective.rs  datasets.rs  error.rs  jobs.rs  (+21 more)
crates/engine/: Cargo.toml
crates/responder/: Cargo.toml  responder.map.example.json
crates/responder/src/: act.rs  breaker.rs  classify.rs  claude.rs  config.rs  email.rs  enrich.rs  git.rs  investigate.rs  main.rs  pipeline.rs  report.rs  state.rs  webhook.rs
crates/runner/: Cargo.toml
crates/store/: Cargo.toml
crates/store-firestore/: Cargo.toml
crates/store-firestore/src/: benchmarks.rs  codec.rs  datasets.rs  events.rs  jobs.rs  lib.rs  limits.rs  prices.rs  projects.rs  prompts.rs  rest.rs  revenue.rs  rubrics.rs  scores.rs
crates/store-firestore/tests/: conformance.rs
crates/store/src/: codec.rs  conformance.rs  lib.rs  sqlite.rs
crates/store/src/sqlite/: benchmarks.rs  collective.rs  datasets.rs  events.rs  forecast.rs  jobs.rs  limits.rs  mod.rs  prices.rs  projects.rs  prompts.rs  relay.rs  revenue.rs  rubrics.rs  scores.rs  tests.rs  usage_cache.rs
crates/store/tests/: sqlite_conformance.rs
deploy/: README.md  install.ps1  install.sh
deploy/cloudrun/: README.md  deploy.ps1  deploy.sh
deploy/compose/: docker-compose.postgres.yml  docker-compose.yml
deploy/docker/: Dockerfile
deploy/terraform/: README.md
docs/: ALERTS.md  ARCHITECTURE.md  BENCHMARK_FRAMEWORK.md  CALIBRATION.md  CI_GATE.md  CURRENCY.md  DATA_MODEL.md  DECISIONS.md  FIRESTORE.md  MARGIN.md  PRICING.md  RELAY.md  ROADMAP.md  SCHEDULING.md
docs/harness/: followups-2026-07-16.md  harness-learnings.md
schema/bigquery/: 001_init.sql
schema/postgres/: 001_init.sql
schema/sqlite/: 001_init.sql
(+169 files in other folders)
