[package]
name = "lighttrack-store"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "LightTrack persistence: Store trait + SQLite backend (local). BigQuery backend later."

[dependencies]
lighttrack-core.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
thiserror.workspace = true
rusqlite = { version = "0.32", features = ["bundled"] }
